--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# User rules
+Resources/Creds/f76credentials.json
+Resources/Extracted/*
+!Resources/Extracted/misc
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
