--- a/CMD/config.ini
+++ b/CMD/config.ini
@@ -23,12 +23,18 @@ WeaponModSheet = WeaponMods
 F76Master = D:\Games\Steam\steamapps\common\Fallout76\Data\SeventySix.esm
 F76NW = D:\Games\Steam\steamapps\common\Fallout76\Data\NW.esm
 
+[LOCALIZATION]
+SeventySixEngPath = Extracted\Lang\strings\seventysix_en.strings
+
 [BA]
 
 # Use "" to handle spaces properly
 BAFilePath = "D:\\Games\\Steam\\steamapps\\common\\Fallout76\\Data\\SeventySix - Startup.ba2"
 Archive2Path = "C:\\Users\\Sergey\\Desktop\\Files\\F76\\CreationKit\\Tools\\Archive2\\Archive2.exe"
 ResultFolder = "D:\\PythonProjects\\F76Damage\\Resources\\Extracted"
+
+LocalizationPath = "D:\\Games\\Steam\\steamapps\\common\\Fallout76\\Data\\SeventySix - Localization.ba2"
+ResultLocalizationFolder = "D:\\PythonProjects\\F76Damage\\Resources\\Extracted\\Lang"
 
 [JSON]
 
@@ -86,22 +92,33 @@ CSVName = Weapon\weapons
 Sort = NAME
 
 CSVRange = Weapon\range_weapons
-RangeSort = ID
 
 CSVMelee = Weapon\melee_weapons
-MeleeSort = ATTACK_SPEED
 
-IgnoreMeleeIfNameStartsWith = DEL_, CUT_, zzz_Test, zzz_TEST, zzz_Debug, DEl_, GasTrap, Trap, DEPRECATED
-IgnoreRangeIfNameStartsWith = DEL_, CUT_, zzz_Test, zzz_TEST, zzz_Debug, DEl_, GasTrap, Trap, DEPRECATED
+CSVThrown = Weapon\thrown_weapons
+
+CSVUnarmed = Weapon\unarmed_weapons
+
+MeleeJsonPath = Extracted\misc\curvetables\json\weapons\melee
+RangeJsonPath = Extracted\misc\curvetables\json\weapons
+IgnoreIfNameStartsWith = DEL_, CUT_, zzz_Test, zzz_TEST, zzz_Debug, DEl_, GasTrap, Trap, DEPRECATED, zzz_AudioTest, zzz_TestAudio
+
+[Perk]
+CSVName = Other\perks
+
+[Spell]
+CSVName = Other\spells
 
 [Weapon.Mod]
-CSVName = Weapon\weapon_mods
+CSVName = Weapon\weapon_mods_full
 
 # Relative to project Resources
 CurveTablesPath = Extracted\misc\curvetables\json
-IgnoreEmptyMods = True
-ExcludeModsWithProps = MaterialSwaps
-IgnoreProps = Keywords, SoundLevel, HitBehaviour, ModelSwap, AttackSound, Enchantments, ActorValues, Rank, ZoomData, AimAssist, AimModel, EquipSlot, OverrideProjectile, ImpactDataSet, Ammo, EquipSound, UnEquipSound, FastEquipSound, IdleSound, NPCAmmoList
+IgnoreEmptyMods = False
+
+# MaterialSwaps
+ExcludeModsWithProps =
+IgnoreProps =
 
 
 
